// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangePasswordForm should match snapshot 1`] = `
<FormSection>
  <Form>
    <FormHeading>
      Change password
    </FormHeading>
    <FormSubHeading>
      Please complete the following fields to change your password. You will be automatically logged out for the changes to be applied
    </FormSubHeading>
    <Grid>
      <GridItem>
        <Input
          dataTest="current-password"
          id="currentPassword"
          labelText="Current Password"
          name="currentPassword"
          type="password"
        />
      </GridItem>
    </Grid>
    <Grid>
      <GridItem>
        <Input
          dataTest="password"
          id="password"
          labelText="Password"
          name="password"
          type="password"
        />
      </GridItem>
      <GridItem>
        <Input
          dataTest="confirmPassword"
          id="confirmPassword"
          labelText="Confirm Password"
          name="confirmPassword"
          type="password"
        />
      </GridItem>
    </Grid>
    <FlexContainerResponsive>
      <Button
        disabled={false}
        loading={false}
        type="submit"
        variant="primary"
      >
        Change Password
      </Button>
    </FlexContainerResponsive>
  </Form>
</FormSection>
`;

exports[`ChangePasswordForm should match snapshot 2`] = `
<FormSection>
  <Form>
    <FormHeading>
      Change password
    </FormHeading>
    <FormSubHeading>
      Please complete the following fields to change your password. You will be automatically logged out for the changes to be applied
    </FormSubHeading>
    <Grid>
      <GridItem>
        <Input
          dataTest="current-password"
          id="currentPassword"
          labelText="Current Password"
          name="currentPassword"
          type="password"
        />
      </GridItem>
    </Grid>
    <Grid>
      <GridItem>
        <Input
          dataTest="password"
          id="password"
          labelText="Password"
          name="password"
          type="password"
        />
      </GridItem>
      <GridItem>
        <Input
          dataTest="confirmPassword"
          id="confirmPassword"
          labelText="Confirm Password"
          name="confirmPassword"
          type="password"
        />
      </GridItem>
    </Grid>
    <FlexContainerResponsive>
      <Button
        disabled={true}
        loading={true}
        type="submit"
        variant="primary"
      >
        Change Password
      </Button>
    </FlexContainerResponsive>
  </Form>
</FormSection>
`;
